cluster_scripts/slurm_regression_aware.out
Traceback (most recent call last):
  File "experiments.py", line 23, in <module>
    from higgs_inference.various.p_values import calculate_all_CL
  File "/home/jb6504/higgs_inference/higgs_inference/various/p_values.py", line 1
    >################################################################################
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "experiments.py", line 23, in <module>
    from higgs_inference.various.p_values import calculate_all_CL
  File "/home/jb6504/higgs_inference/higgs_inference/various/p_values.py", line 1
    >################################################################################
    ^
SyntaxError: invalid syntax
